--- a/merge-chapter-all/service-hi/pom.xml
+++ b/merge-chapter-all/service-hi/pom.xml
@@ -57,6 +57,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+            <version>RELEASE</version>
+        </dependency>
 	</dependencies>
 
 	<dependencyManagement>
