--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,36 @@
-.idea
+.jar
+.log
+.pid
+.zip
+.rar
+.tar.gz
 .DS_Store
+*/.DS_Store
 target
+*.class
+*.db
+*.*~
+~*.*
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+
+### IntelliJ IDEA ###
+.idea
+*/.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
