--- a/deploy-merge-all/zipkin-server/application.yml
+++ b/deploy-merge-all/zipkin-server/application.yml
@@ -7,4 +7,15 @@ server:
 spring:
   application:
     name: zipkin-server
+zipkin:
+  storage:
+    type: elasticsearch
+    StorageComponent: elasticsearch
+    elasticsearch:
+      cluster: elasticsearch
+      max-requests: 30
+      index: zipkin
+      index-shards: 3
+      index-replicas: 1
+      hosts: localhost:9200
 #spring.sleuth.sampler.percentage: 1.0
